# LingoView

./: .editorconfig  .env.example  .gitignore  .npmrc  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  start.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  codeql.yml  labeler.yml  stale.yml
docs/: development-plan.md  progress-log.md  summary.md
python/: README.md  pyproject.toml  run_api.sh  run_webui.sh
python/lingoview_service/: api.py  audio_processing.py  config.py  dictionary.py  mecab_correction.py  media_processing.py  pipeline.py  tokenizer.py  translate.py  vad.py  webui.py
python/tests/: test_cli.py  test_exports.py  test_pipeline.py  test_translate.py
scripts/: bootstrap.sh  run-tests.ts
scripts/dictionaries/: build.ts  types.ts
web/: .env.example  README.md  package.json
web/src/: App.css  App.tsx  index.css
web/src/components/: DictionaryPanel.tsx  SubtitleList.tsx  UploadForm.tsx  VideoPlayer.tsx
web/src/types/: index.ts
